# scholar-agent

./: .env.example  .gitignore  .lore.example.json  .lore.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  LICENSE  Makefile  NORTHSTAR.md  PARAMETERS_SNAPSHOT.md  README.md  README.zh-CN.md  SECURITY.md  docker-compose.yml  mcp_server.py  promotion.md  pyproject.toml  requirements.txt  setup.sh  setup_mcp.py
.cursor/rules/: lore-agent.mdc
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: research.agent.md
.github/instructions/: research-workflow.instructions.md
.github/prompts/: paper-to-code.prompt.md  tool-comparison.prompt.md
.github/skills/discovery/: SKILL.md
.github/skills/domain-routing/: SKILL.md
.github/skills/github-triage/: SKILL.md
.github/skills/report/: SKILL.md
.github/workflows/: publish.yml  test.yml
assets/: synonyms.json
docs/: 2026-04-01-bootstrap-progress.md  2026-04-01-local-rag-bootstrap-plan.md  2026-04-01-local-rag-roadmap.md  2026-04-01-rag-discussion-notes.md  2026-04-01-review-session.md  2026-04-02-phase4-agent-control-loop.md  2026-04-02-phase6-evolution-roadmap.md  comparison.md  deep_audit_fix_plan.md  deep_audit_report.md  demo-review.md  demo-video-script.md  refactor_plan.md  refactor_plan_evaluation.md  refactor_plan_v2.md  进度与效果.md
docs/archive/: README.md  deep_audit_round2.md
docs/reviews/: karpathy-llm-wiki-comparison.md
knowledge/cards/definitions/: markov-chain-definition.md
knowledge/cards/derivations/: qpe-error-bound-derivation.md  stationary-distribution-derivation.md
knowledge/cards/methods/: quantization-aware-training-method.md
knowledge/cards/theorems/: lp-duality-theorem.md
knowledge/qpe/: research-xgboost-for-radar-qpe-quantitative-precipitation-estimation.md
knowledge/templates/: comparison-card.md  decision-record.md  definition-card.md  derivation-card.md  method-card.md  theorem-card.md
reviews/: 2026-05-26-code-review.md
schemas/: answer.schema.json  domain_routing_policy.json  evidence.schema.json  routing_skill.md
scholar_agent/: cli.py
scholar_agent/engine/: build_graph.py  cache_helper.py  distill_knowledge.py  domain_router.py  knowledge_governance.py  local_index.py  local_retrieve.py  migrate_hierarchy.py  orchestrate_research.py  promote_draft.py  research_harness.py  retry.py  run_pipeline.py  scholar_config.py  search_pipeline.py
scholar_agent/engine/academic/: arxiv_search.py  image_extractor.py  innovation_scorer.py  note_linker.py  paper_analyzer.py
scholar_agent/engine/inputs/: external_candidates.py
scholar_agent/installers/: claude.py
scholar_agent/skills/scholar-agent/: SKILL.md
scholar_agent/validation/: __init__.py
scripts/: agent.py  build_answer_context.py  build_evidence_pack.py  build_graph.py  cache_helper.py  close_knowledge_loop.py  common.py  distill_knowledge.py  domain_router.py  embedding_retrieve.py  generate_demo_gif.py  knowledge_governance.py  local_index.py  local_retrieve.py  lore_config.py  orchestrate_research.py  promote_draft.py  render_answer_bundle.py  research_harness.py  retry.py  run_eval.py  search_pipeline.py  smoke_test.py  synthesize_answer.py
scripts/academic/: arxiv_search.py  conf_search.py  daily_workflow.py  image_extractor.py  innovation_scorer.py  note_linker.py  paper_analyzer.py  scoring.py
scripts/normalizers/: evidence_normalizer.py
scripts/search_providers/: arxiv_provider.py
searxng/: settings.yml
skills/conf-papers/: SKILL.md  conf-papers.yaml
skills/conf-papers/scripts/: search_conf_papers.py
skills/extract-paper-images/: SKILL.md
skills/extract-paper-images/scripts/: extract_images.py
skills/paper-analyze/: SKILL.md
skills/paper-analyze/scripts/: generate_note.py  update_graph.py
skills/paper-search/: SKILL.md
skills/start-my-day/: SKILL.md
skills/start-my-day/scripts/: search_arxiv.py
src/scholar_agent/: __init__.py  __main__.py  cli.py  runtime.py  server.py
src/scholar_agent/adapters/: __init__.py  http_server.py  mcp_server.py
src/scholar_agent/config/: __init__.py  loader.py  manager.py  paths.py  profiles.py
src/scholar_agent/config_data/: config.yaml
src/scholar_agent/engine/: __init__.py  agent.py  bm25.py  build_answer_context.py  build_evidence_pack.py  build_graph.py  cache_helper.py  close_knowledge_loop.py  common.py  distill_knowledge.py  domain_router.py  embedding_retrieve.py  exceptions.py  import_service.py  llm_client.py  (+22 more)
templates/: knowledge.md  lore.json.template  mcp.json.template  method.md
tests/: conftest.py  fake_research_harness.py  test_academic.py  test_agent.py  test_analyze_paper_pdf.py  test_answer_context.py  test_answer_markdown_normalize.py  test_arxiv_provider_pure.py  test_arxiv_search_pure.py  test_bm25_retrieval.py  test_bm25_stemming.py  test_build_graph.py  test_cli_formatting.py  test_common.py  test_conf_search_pure.py  test_config_loader.py  test_config_manager.py  test_config_paths.py  test_config_profiles.py  test_distill_knowledge.py  test_distill_knowledge_unit.py  test_domain_router.py  test_domain_router_unit.py  test_domain_seed_cards.py  test_e2e_card.py  test_embedding_retrieve.py  test_engineering_card.py  test_evidence_pack_unit.py  test_external_candidates.py  test_f3_evidence_links.py  test_fetch_url.py  test_hybrid_evidence_pack.py  test_import_paperpulse.py  test_incremental_index.py  test_innovation_scorer.py  test_input_validation.py  test_installers.py  test_installers_common.py  test_knowledge_governance_unit.py  test_knowledge_lifecycle.py  (+43 more)
tests/fixtures/: example-markov-chain.md  retrieval_benchmark.json  template-knowledge.md  template-method.md
(+66 files in other folders)
