[project]
name = "scholar-agent"
version = "0.1.0"
description = "Knowledge flywheel MCP server + academic paper research pipeline for Claude Code and VS Code Copilot"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "scholar-agent contributors"}]
keywords = ["mcp", "knowledge-management", "arxiv", "academic-research", "obsidian"]

dependencies = [
    "jsonschema>=4.23,<5",
    "fastmcp>=2.0",
    "PyMuPDF>=1.24.0",
    "requests>=2.28",
]

[project.optional-dependencies]
academic = [
    "PyYAML>=6.0",
]
embedding = [
    "sentence-transformers>=3.0",
]
dev = [
    "pytest>=7.0",
]
all = [
    "scholar-agent[academic,embedding]",
]

[project.scripts]
scholar-agent = "scholar_agent.cli:main"

[project.urls]
Homepage = "https://github.com/zfy465914233/scholar-agent"
Repository = "https://github.com/zfy465914233/scholar-agent"
Issues = "https://github.com/zfy465914233/scholar-agent/issues"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["scholar_agent*"]

[tool.setuptools.package-data]
scholar_agent = ["schemas/**", "templates/**", "config_data/**", "skills/**", "validation/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
